package behavioral.momento;

public class Momento {

    private String text;

    public Momento(String text) {
        this.text = text;
    }

    public String getText() {
        return text;
    }
}
